<resources>
    <string name="app_name">Tasker</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">WELCOME!</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="new_task">New Task</string>
    <string name="task_headline">Plan Your Day</string>
    <string name="main_headline">Plan Your Week</string>
    <string name="sunday">SUNDAY</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="welcome_login">WELCOME TO TASKER!</string>

    <string name="login">LOG IN</string>
    <string name="resend">Reset Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="signup_account">Don\'t have an account? press HERE to SIGN UP!</string>
    <string name="signup_header">Sign Up</string>
    <string name="signup_btn">Press to SIGNUP</string>
    <string name="title_new_task">Add a new task</string>
    <string name="important">Important</string>
    <string name="un_important">Un Important</string>
    <string name="task_name">Enter Task Name</string>
    <string name="task_body">Enter Task Body</string>
    <string name="add_alert">Add Alert</string>
    <string name="remove_alert">Remove Alert</string>
    <string name="alert_hint">Here will be your alert DATE</string>
    <string name="positive_add">Add task</string>
    <string name="negative_cancel">Cancel task</string>
    <string name="task_yes">YES</string>
    <string name="task_no">NO</string>
    <string name="task_sure">Do you want to delete this task?</string>
    <string name="task_success">The task has been deleted SUCCESSFULLY!</string>
    <string name="blank_detail">One or more detail is blank.</string>
    <string name="pass_length">Your password length must be 6 or more digits.</string>
    <string name="pass_contain">Your Email must  contain \'@\'</string>
    <string name="success_enter">You Entered With Success!</string>
    <string name="auth_failed">Authentication FAILED!</string>
    <string name="home">HOME</string>
    <string name="work">WORK</string>
    <string name="meetings">MEETINGS</string>
    <string name="medical">MEDICAL</string>
    <string name="studies">STUDIES</string>
    <string name="new_category">ADD A NEW CATEGORY</string>
    <string name="select_image_hint">Select Category Image</string>
    <string name="select_title_hint">Select Category Title</string>
    <string name="select_color_hint">Select Category Color</string>
    <string name="new_category_btn">Add Category</string>
    <string name="category_toast_success">Category Added With Success!</string>
    <string name="toast_null_category">Eror! You must fill all the data above.</string>
    <string name="toast_category_removed">This category has been removed successfully!</string>
    <string name="defult_categories_toast">Eror! Defult categories! you can\'t remove them.</string>
    <string name="or">OR</string>
    <string name="category_sure">Are you sure you want to delete this category?</string>
    <string name="task_added_seccess">The Task has been added SUCCESSFULLY!</string>
    <string name="task_eror">Error occurred! try again..</string>
    <string name="tasket_prompt">Hey! would you like to plan your weekly tasks? Use \'TASKER\' and start to plan your week!</string>
    <string name="pets">Pets</string>
    <string name="party">Party</string>
    <string name="travels">Travels</string>
    <string name="holiday">Holiday</string>
    <string name="personal">Personal</string>
    <string name="kids">Kids</string>
    <string name="shopping">Shopping</string>
    <string name="market">Market</string>
    <string name="car">Car</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="went_wrong">Something went wrong..try again</string>
    <string name="signout">Sign Out</string>
    <string name="share">Share</string>
    <string name="error_verify">Error occurred! Did you sign up ? If not, you must go to the Sign Up page first.</string>
    <string name="error_signup">Error occurred! try to change the detailes please.</string>
    <string name="category_exist">This Category name is already EXIST!</string>
    <string name="travels_main">TRAVELS</string>
    <string name="flights">Flights</string>
    <string name="add_time">Add  Alaram</string>
    <string name="add_day">Add day</string>
    <string name="repeating">Repeat Alaram</string>
    <string name="unrepeat_alaram">Un Repeat Alaram</string>
    <string name="add_alaram">Add Alaram</string>
    <string name="remove_alaram">Remove Alaram</string>
    <string name="stop_alarm">Press To STOP Alarm!</string>

</resources>
